# mimalloc_replace

./: .gitignore  Cargo.toml  build.rs  build.zig  readme-zh_CN.md  readme.md
src/: lib.rs
